--- a/frontend/studente/src/assets/i18n/en.json
+++ b/frontend/studente/src/assets/i18n/en.json
@@ -278,5 +278,9 @@
   "cv_skills_label": "COMPETENZA PERSONALE",
   "cv_empty_skills_label": "Non sono presenti competenza personale",
   "cv_attachment_label": "ALLEGATI",
-  "cv_empty_attachment_label": "Non sono presenti allegati."
+  "cv_empty_attachment_label": "Non sono presenti allegati.",
+  "lbl_terms_of_service": "Terms of service",
+  "lbl_accept": "Accept",
+  "lbl_reject": "Reject",
+  "terms_refused_alert_text": "Terms refused."
 }
