--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -280,5 +280,9 @@
   "cv_skills_label": "COMPETENZA PERSONALE",
   "cv_empty_skills_label": "Non sono presenti competenza personale",
   "cv_attachment_label": "ALLEGATI",
-  "cv_empty_attachment_label": "Non sono presenti allegati."
+  "cv_empty_attachment_label": "Non sono presenti allegati.",
+  "lbl_terms_of_service": "Termini di utilizzo",
+  "lbl_accept": "Accetto",
+  "lbl_reject": "Rifiuto",
+  "terms_refused_alert_text": "Termini rifiutati."
 }
