--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -106,6 +106,7 @@
   "profile_cel_label": "Cellulare: ",
   "profile_cf_label": "Cod. Fisc: ",
   "profile_mail_label": "Email: ",
+  "profile_addr_label": "Indirizzo: ",
   "profile_birthday_label": "Data di nascita: ",
   "profile_update_button": "Modifica",
   "profile_cancel_button": "Annulla",
@@ -113,6 +114,7 @@
   "profile_tel_input_placeholder": "Inserire un numero di telefono",
   "profile_cel_input_placeholder": "Inserire un numero di cellulare",
   "profile_mail_input_placeholder": "Inserire una mail",
+  "profile_addr_input_placeholder": "Inserire una indirizzo",
   "profile_link_placeholder": "Inserire profilo link",
   "alert_delete_certification_title": "Conferma",
   "alert_delete_certification_message": "Sei sicuro di voler annulare le modifiche?",
